[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycheevos"
version = "0.1.0"
description = "RetroAchievements achievement generator toolkit"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Unlicense"}
authors = [
    {name = "Carlos Natanael"}
]

[tool.setuptools]
packages = ["core", "models", "utils"]